--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+Host app<br>
+
+<LinkTo @route="foo">Foo Engine</LinkTo><br>
 
 {{outlet}}
